# ctf

pyctf/: pyproject.toml
pyctf/picoctf_mind_your_ps_and_qs/: main.py
pyctf/picoctf_static_aint_always_noise/: .ltdis.sh.swp
