[tool.poetry]
name = "pyctf"
version = "0.1.0"
description = ""
authors = ["Paweł Wacławczyk <p.a.waclawczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.17"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
